salesforce-main/src/main/default/objects/Contact/fields/AA_Suffix__c.field-meta.xml
<CustomField>
    <fullName>AA_Suffix__c</fullName>
    <description>Added for SIS Integrations.</description>
    <label>Suffix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>