salesforce-main/src/main/default/objects/Contact/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>ID Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>