salesforce-main/src/main/default/objects/Contact/fields/Administrate_ContactId__c.field-meta.xml
<CustomField>
    <fullName>Administrate_ContactId__c</fullName>
    <label>Administrate ContactId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>