salesforce-main/src/main/default/objects/Contact/fields/Allocate_Talent_Agent__c.field-meta.xml
<CustomField>
    <fullName>Allocate_Talent_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allocate Talent Agent</label>
    <type>Checkbox</type>
</CustomField>