salesforce-main/src/main/default/objects/Contact/fields/Allocate_Talent_Coach__c.field-meta.xml
<CustomField>
    <fullName>Allocate_Talent_Coach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allocate Talent Coach</label>
    <type>Checkbox</type>
</CustomField>