salesforce-main/src/main/default/objects/Contact/fields/Already_Provisioned_For__c.field-meta.xml
<CustomField>
    <fullName>Already_Provisioned_For__c</fullName>
    <label>Already Provisioned For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>