salesforce-main/src/main/default/objects/Contact/fields/Annual_Family_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Family_Income__c</fullName>
    <description>Total income of the student&apos;s family per year</description>
    <label>Annual Family Income</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>