salesforce-main/src/main/default/objects/Contact/fields/App_Notifications_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>App_Notifications_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>App Push Notifications Opt In field in line with GDPR compliance. Linked to Marketing Cloud and student preference centre</description>
    <label>App Notifications Opt In</label>
    <type>Checkbox</type>
</CustomField>