salesforce-main/src/main/default/objects/Contact/fields/Apprenticeship__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship__c</fullName>
    <label>Apprenticeship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>