salesforce-main/src/main/default/objects/Contact/fields/Apprenticeship_Programme__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship_Programme__c</fullName>
    <label>Apprenticeship Programme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>