salesforce-main/src/main/default/objects/Contact/fields/AR_Booking_Rules_Authorization_Level__c.field-meta.xml
<CustomField>
    <fullName>AR_Booking_Rules_Authorization_Level__c</fullName>
    <label>Booking Rules / Authorization Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>