salesforce-main/src/main/default/objects/Contact/fields/BNR_Student_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>BNR_Student_Status_Code__c</fullName>
    <label>Student Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>