salesforce-main/src/main/default/objects/Contact/fields/BNR_Student_Status_Display__c.field-meta.xml
<CustomField>
    <fullName>BNR_Student_Status_Display__c</fullName>
    <formula>IF(BNR_Student_Status_Code__c &lt;&gt; null, 
CASE( BNR_Student_Status_Code__c, 
&quot;AS&quot;, &quot;Active&quot;, 
&quot;GR&quot;, &quot;Graduated&quot;, 
&quot;IS&quot;, &quot;Inactive&quot;, 
&quot;ND&quot;, &quot;Non-Degree Program Complete&quot;, 
&quot;AC&quot;, &quot;Academically Complete&quot;, 
&quot;Error - Unknown Code&quot; 
), 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Status Display</label>
    <type>Text</type>
</CustomField>