salesforce-main/src/main/default/objects/Contact/fields/BPP_Email__c.field-meta.xml
<CustomField>
    <fullName>BPP_Email__c</fullName>
    <description>Student&apos;s BPP email address.</description>
    <label>BPP Email</label>
    <type>Email</type>
</CustomField>