salesforce-main/src/main/default/objects/Contact/fields/BPTC_Number__c.field-meta.xml
<CustomField>
    <fullName>BPTC_Number__c</fullName>
    <description>Student&apos;s unique identification number as provided by BPTC data source.</description>
    <label>BPTC Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>