salesforce-main/src/main/default/objects/Contact/fields/CAB_Code__c.field-meta.xml
<CustomField>
    <fullName>CAB_Code__c</fullName>
    <description>Student&apos;s unique identifier as provided by CAB data source.</description>
    <label>CAB Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>