salesforce-main/src/main/default/objects/Contact/fields/CIM_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>CIM_Membership_Number__c</fullName>
    <description>CIM Membership Number</description>
    <label>CIM Membership Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>