salesforce-main/src/main/default/objects/Contact/fields/Coach__c.field-meta.xml
<CustomField>
    <fullName>Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coach</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Student</relationshipLabel>
    <relationshipName>Student</relationshipName>
    <type>Lookup</type>
</CustomField>