salesforce-main/src/main/default/objects/Contact/fields/Contact_Id_18_Characters__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_18_Characters__c</fullName>
    <description>Legacy Migration</description>
    <label>Contact Id 18 Characters</label>
    <length>18</length>
    <type>Text</type>
</CustomField>