salesforce-main/src/main/default/objects/Contact/fields/Contact_Preference_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Preference_Type__c</fullName>
    <description>Stores the Contact Channels provided in Application events</description>
    <label>Contact preference type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COURSES_AND_LEARNING</fullName>
                <label>Courses and Learning</label>
            </value>
            <value>
                <fullName>SURVEY_AND_RESEARCH</fullName>
                <label>Surveys and research</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>