salesforce-main/src/main/default/objects/Contact/fields/Contact_Role_Category__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Category__c</fullName>
    <description>Category of BD contact job role</description>
    <label>Contact Role Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apprenticeships</fullName>
            </value>
            <value>
                <fullName>C Suite</fullName>
            </value>
            <value>
                <fullName>Diversity and Inclusion</fullName>
            </value>
            <value>
                <fullName>Division Director</fullName>
            </value>
            <value>
                <fullName>Division Manager</fullName>
            </value>
            <value>
                <fullName>Early Career</fullName>
            </value>
            <value>
                <fullName>Graduate Development</fullName>
            </value>
            <value>
                <fullName>Graduate Recruitment</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Learning and Development</fullName>
            </value>
            <value>
                <fullName>People and Culture</fullName>
            </value>
            <value>
                <fullName>Resourcing</fullName>
            </value>
            <value>
                <fullName>Talent Management</fullName>
            </value>
            <value>
                <fullName>Team Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>