salesforce-main/src/main/default/objects/Contact/fields/Cost_Centre_Number__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre_Number__c</fullName>
    <label>Cost Centre Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>