salesforce-main/src/main/default/objects/Contact/fields/Country_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Birth__c</fullName>
    <description>Country of student&apos;s birth.</description>
    <label>Old Country of Birth</label>
    <length>100</length>
    <type>Text</type>
</CustomField>