salesforce-main/src/main/default/objects/Contact/fields/Country_of_Residence__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Residence__c</fullName>
    <description>Country of student&apos;s current residence.</description>
    <label>Country of Residence</label>
    <length>100</length>
    <type>Text</type>
</CustomField>