salesforce-main/src/main/default/objects/Contact/fields/CPID_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>CPID_Membership_Number__c</fullName>
    <description>CPID Membership Number</description>
    <label>CIPD Membership Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>