salesforce-main/src/main/default/objects/Contact/fields/Create_lead__c.field-meta.xml
<CustomField>
    <fullName>Create_lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create lead</label>
    <type>Checkbox</type>
</CustomField>