salesforce-main/src/main/default/objects/Contact/fields/Criminal_Conviction__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Conviction__c</fullName>
    <description>Indicates if the student has a criminal conviction.</description>
    <label>Criminal Conviction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>