salesforce-main/src/main/default/objects/Contact/fields/Dependents_While_Studying__c.field-meta.xml
<CustomField>
    <fullName>Dependents_While_Studying__c</fullName>
    <description>Is the student planning to bring dependents into the country while studying?</description>
    <inlineHelpText>Is the student planning to bring dependents into the country while studying?</inlineHelpText>
    <label>Dependents While Studying</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>