salesforce-main/src/main/default/objects/Contact/fields/Devolved_Nation__c.field-meta.xml
<CustomField>
    <fullName>Devolved_Nation__c</fullName>
    <label>Devolved Nation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>England</fullName>
            </value>
            <value>
                <fullName>Scotland</fullName>
            </value>
            <value>
                <fullName>Wales</fullName>
            </value>
            <value>
                <fullName>Northern Ireland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>