salesforce-main/src/main/default/objects/Contact/fields/Dietary_Needs__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Needs__c</fullName>
    <label>Dietary Needs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>