salesforce-main/src/main/default/objects/Contact/fields/Disability_Needs__c.field-meta.xml
<CustomField>
    <fullName>Disability_Needs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if student needs learning support.  This field is populated by data team on certain data loads, but the detail field (long text) is not and must be populated by BPP staff.</description>
    <label>Learning Support</label>
    <type>Checkbox</type>
</CustomField>