salesforce-main/src/main/default/objects/Contact/fields/DO_NOT_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>DO_NOT_CONTACT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not contact - overrides all preferences (setting them all to opted out) &amp; includes ALL types of communications</description>
    <inlineHelpText>Select to stop all types of communications</inlineHelpText>
    <label>DO NOT CONTACT</label>
    <type>Checkbox</type>
</CustomField>