salesforce-main/src/main/default/objects/Contact/fields/Do_Not_Contact_Reason__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_Reason__c</fullName>
    <description>Reason for selecting Do Not Contact</description>
    <label>Do Not Contact Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DO_NOT_CONTACT__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>GDPR Exclusion - External</fullName>
            </value>
            <value>
                <fullName>GDPR Exclusion - Internal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>