salesforce-main/src/main/default/objects/Contact/fields/Document_Storage_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_Storage_URL__c</fullName>
    <description>Link to Sharepoint site with student documentation.</description>
    <inlineHelpText>Link to Sharepoint site with student documentation.</inlineHelpText>
    <label>Document Storage URL</label>
    <type>Url</type>
</CustomField>