salesforce-main/src/main/default/objects/Contact/fields/Domicile__c.field-meta.xml
<CustomField>
    <fullName>Domicile__c</fullName>
    <label>Domicile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XF~ England</fullName>
                <label>England</label>
            </value>
            <value>
                <fullName>XG~ Northern Ireland</fullName>
                <label>Northern Ireland</label>
            </value>
            <value>
                <fullName>XH~ Scotland</fullName>
                <label>Scotland</label>
            </value>
            <value>
                <fullName>XI~ Wales</fullName>
                <label>Wales</label>
            </value>
            <value>
                <fullName>AF~ Afghanistan</fullName>
                <label>Afghanistan</label>
            </value>
            <value>
                <fullName>XQ~ Africa not otherwise specified</fullName>
                <label>Africa not otherwise specified</label>
            </value>
            <value>
                <fullName>AX~ Åland Islands {Ahvenamaa}</fullName>
                <label>Åland Islands {Ahvenamaa}</label>
            </value>
            <value>
                <fullName>AL~ Albania</fullName>
                <label>Albania</label>
            </value>
            <value>
                <fullName>DZ~ Algeria</fullName>
                <label>Algeria</label>
            </value>
            <value>
                <fullName>AS~ American Samoa</fullName>
                <label>American Samoa</label>
            </value>
            <value>
                <fullName>AD~ Andorra</fullName>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>AO~ Angola</fullName>
                <label>Angola</label>
            </value>
            <value>
                <fullName>AI~ Anguilla</fullName>
                <label>Anguilla</label>
            </value>
            <value>
                <fullName>XX~ Antarctica and Oceania not otherwise specified</fullName>
                <label>Antarctica and Oceania not otherwise specified</label>
            </value>
            <value>
                <fullName>AG~ Antigua and Barbuda</fullName>
                <label>Antigua and Barbuda</label>
            </value>
            <value>
                <fullName>AR~ Argentina</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>AM~ Armenia</fullName>
                <label>Armenia</label>
            </value>
            <value>
                <fullName>AW~ Aruba</fullName>
                <label>Aruba</label>
            </value>
            <value>
                <fullName>XS~ Asia (Except Middle East) not otherwise specified</fullName>
                <label>Asia (Except Middle East) not otherwise specified</label>
            </value>
            <value>
                <fullName>AU~ Australia</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AT~ Austria</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>AZ~ Azerbaijan</fullName>
                <label>Azerbaijan</label>
            </value>
            <value>
                <fullName>BS~ Bahamas, The</fullName>
                <label>Bahamas, The</label>
            </value>
            <value>
                <fullName>BH~ Bahrain</fullName>
                <label>Bahrain</label>
            </value>
            <value>
                <fullName>BD~ Bangladesh</fullName>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>BB~ Barbados</fullName>
                <label>Barbados</label>
            </value>
            <value>
                <fullName>BY~ Belarus</fullName>
                <label>Belarus</label>
            </value>
            <value>
                <fullName>BE~ Belgium</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>BZ~ Belize</fullName>
                <label>Belize</label>
            </value>
            <value>
                <fullName>BJ~ Benin</fullName>
                <label>Benin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>