salesforce-main/src/main/default/objects/Contact/fields/Emergency_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Email__c</fullName>
    <description>The email address of the designated Emergency Contact</description>
    <label>Emergency Contact Email</label>
    <type>Email</type>
</CustomField>