salesforce-main/src/main/default/objects/Contact/fields/Emergency_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_First_Name__c</fullName>
    <description>The first name of the designated Emergency Contact</description>
    <label>Emergency Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>