salesforce-main/src/main/default/objects/Contact/fields/Emergency_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Last_Name__c</fullName>
    <description>The last name of the designated Emergency Contact</description>
    <label>Emergency Contact Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>