salesforce-main/src/main/default/objects/Contact/fields/Emergency_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Mobile__c</fullName>
    <description>The mobile number of the designated Emergency Contact</description>
    <label>Emergency Contact Mobile</label>
    <type>Phone</type>
</CustomField>