salesforce-main/src/main/default/objects/Contact/fields/Emergency_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship__c</fullName>
    <description>The relationship between the student and the designated Emergency Contact</description>
    <label>Emergency Contact Relationship</label>
    <length>100</length>
    <type>Text</type>
</CustomField>