salesforce-main/src/main/default/objects/Contact/fields/Employment_Non_Legal__c.field-meta.xml
<CustomField>
    <fullName>Employment_Non_Legal__c</fullName>
    <description>Indicates if the student has had non legal employment previously.</description>
    <label>Employment: Non-Legal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>