salesforce-main/src/main/default/objects/Contact/fields/ESFA_Health_Problems_Q1__c.field-meta.xml
<CustomField>
    <fullName>ESFA_Health_Problems_Q1__c</fullName>
    <description>Created as per JIRA 2243</description>
    <label>ESFA Health Problems Q1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1~ Learner considers himself or herself to have a learning difficulty and/or disability and/or health problem</fullName>
            </value>
            <value>
                <fullName>2~ Learner does not consider himself or herself to have a learning difficulty and/or disability and/or health problem</fullName>
            </value>
            <value>
                <fullName>9~ No information provided by the learner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>