salesforce-main/src/main/default/objects/Contact/fields/Ethnicity_ESFA__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_ESFA__c</fullName>
    <description>Created as per JIRA 2243</description>
    <label>Ethnicity (ESFA)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>31~ English / Welsh / Scottish / Northern Irish / British</fullName>
            </value>
            <value>
                <fullName>32~ Irish</fullName>
            </value>
            <value>
                <fullName>33~ Gypsy or Irish Traveller</fullName>
            </value>
            <value>
                <fullName>34~ Any Other White background</fullName>
            </value>
            <value>
                <fullName>35~ White and Black Caribbean</fullName>
            </value>
            <value>
                <fullName>36~ White and Black African</fullName>
            </value>
            <value>
                <fullName>37~ White and Asian</fullName>
            </value>
            <value>
                <fullName>38~Any Other Mixed / multiple ethnic background</fullName>
            </value>
            <value>
                <fullName>39~ Indian</fullName>
            </value>
            <value>
                <fullName>40~ Pakistani</fullName>
            </value>
            <value>
                <fullName>41~ Bangladeshi</fullName>
            </value>
            <value>
                <fullName>42~ Chinese</fullName>
            </value>
            <value>
                <fullName>43~ Any other Asian background</fullName>
            </value>
            <value>
                <fullName>44~ African</fullName>
            </value>
            <value>
                <fullName>45~ Caribbean</fullName>
            </value>
            <value>
                <fullName>46~ Any other Black / African / Caribbean background</fullName>
            </value>
            <value>
                <fullName>47~ Arab</fullName>
            </value>
            <value>
                <fullName>98~ Any other ethnic group</fullName>
            </value>
            <value>
                <fullName>99~ Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>