salesforce-main/src/main/default/objects/Contact/fields/experianqas__Updated_Touchpoints__c.field-meta.xml
<CustomField>
    <fullName>experianqas__Updated_Touchpoints__c</fullName>
    <label>Updated Touchpoints</label>
    <length>255</length>
    <type>Text</type>
</CustomField>