salesforce-main/src/main/default/objects/Contact/fields/experianqas__Updated_Touchpoints_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>experianqas__Updated_Touchpoints_Timestamp__c</fullName>
    <label>Updated Touchpoints Timestamp</label>
    <type>DateTime</type>
</CustomField>