salesforce-main/src/main/default/objects/Contact/fields/Family_Members__c.field-meta.xml
<CustomField>
    <fullName>Family_Members__c</fullName>
    <description>Number of family members under that student&apos;s household.</description>
    <label>Family Members</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>