salesforce-main/src/main/default/objects/Contact/fields/Father_s_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Occupation__c</fullName>
    <description>Student&apos;s father&apos;s occupation</description>
    <label>Father&apos;s Occupation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>