salesforce-main/src/main/default/objects/Contact/fields/Feedback_Flag__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Flag__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Feedback Flag</label>
    <type>Date</type>
</CustomField>