salesforce-main/src/main/default/objects/Contact/fields/First_Language__c.field-meta.xml
<CustomField>
    <fullName>First_Language__c</fullName>
    <description>Indicates the first language this student or prospective student learned.</description>
    <label>First Language</label>
    <length>40</length>
    <type>Text</type>
</CustomField>