salesforce-main/src/main/default/objects/Contact/fields/Follow_up_on_PE_assessment__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_on_PE_assessment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow-up on PE assessment</label>
    <type>Checkbox</type>
</CustomField>