salesforce-main/src/main/default/objects/Contact/fields/Functional_Skills_Required__c.field-meta.xml
<CustomField>
    <fullName>Functional_Skills_Required__c</fullName>
    <label>Functional Skills Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>